.k8s/manifest.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: realworld-api
  labels:
    name: realworld-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realworld-api
  namespace: realworld-api
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: realworld-api
  template:
    metadata:
      labels:
        app: realworld-api
    spec:
      containers:
      - name: apache-exporter-sidecar
        image: lusotycoon/apache-exporter
        resources:
          requests:
            cpu: "20m"
            memory: 16Mi
          limits:
            cpu: "100"
            memory: 128Mi
        args:
          - '--scrape_uri=http://localhost:8080/server-status?auto'
        ports:
          - containerPort: 9117
            protocol: TCP
      - name: realworld-api
        image: meezaan/realworld-api:$COMMIT_TAG
        livenessProbe:
          httpGet:
            path: /api/articles
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 30
          timeoutSeconds: 7
          failureThreshold: 3
        startupProbe:
          httpGet:
            path: /api/articles
            port: 8080
          periodSeconds: 7
          failureThreshold: 3
        resources:
          requests:
            cpu: "100m"
            memory: 100Mi
          limits:
            cpu: "300m"
            memory: 400Mi
        ports:
          - containerPort: 8080
            protocol: TCP
---
#  Service
apiVersion: v1
kind: Service
metadata:
  name: realworld-api
  namespace: realworld-api
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: realworld-api

---
apiVersion: v1
kind: Service
metadata:
  name: realworld-api-metrics
  namespace: realworld-api
  labels:
    name: realworld-api-metrics
spec:
  type: ClusterIP
  selector:
    app: realworld-api
  ports:
    - name: metrics
      port: 9117
      targetPort: 9117
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realworld-api-ingress
  namespace: realworld-api
  annotations:
    konghq.com/protocols: "https"
    konghq.com/https-redirect-status-code: "301"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: kong
spec:
  tls:
  - hosts:
    - realworld-api.tt.meezaan.net
    secretName: "realworld-api-tls"
  rules:
  - host: realworld-api.tt.meezaan.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: realworld-api
            port:
              number: 80
